carousel tecnologies logos

--- a/Site/index.html
+++ b/Site/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Nexus Company</title>
@@ -8,8 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="Resources/js/jquery.js"></script>
     <script src="Resources/js/index.js"></script>
-    
+
 </head>
+
 <body>
     <nav>
         <div class="content">
@@ -29,7 +31,7 @@
         </section>
         <section class="read-more">
             <p>Veja mais</p>
-            <img class="arrow" src="Resources\img\arrow_down.svg" onclick="seen()" />
+            <img class="arrow" src="Resources\img\arrow-down-navigation.svg" onclick="seen()" />
         </section>
     </main>
 
@@ -42,7 +44,8 @@
             </div>
             <div class="content right slide">
                 <h1>Fullstack</h1>
-                <p>Desenvolvemos para <span>todas</span> as plataformas, dessa forma seu <b>app</b> será acessado em <span>todos</span> dispositivos.</p>
+                <p>Desenvolvemos para <span>todas</span> as plataformas, dessa forma seu <b>app</b> será acessado em
+                    <span>todos</span> dispositivos.</p>
                 <button type="button" class="negative" onclick="more()">
                     Saiba mais
                 </button>
@@ -51,7 +54,8 @@
         <div class="content-divided">
             <div class="content left slide">
                 <h1>Nossos preços</h1>
-                <p>Focamos em <b>sempre</b> entregar o <span> melhor resultado</span> com o <span> menor custo </span> possível para todos os nossos parceiros.</p>
+                <p>Focamos em <b>sempre</b> entregar o <span> melhor resultado</span> com o <span> menor custo </span>
+                    possível para todos os nossos parceiros.</p>
                 <button type="button" class="positive" onclick="more()">
                     Saiba mais
                 </button>
@@ -70,7 +74,8 @@
             </div>
             <div class="content right slide">
                 <h1>Start up</h1>
-                <p>Somos novos na área empresarial, porém temos total <span>experiência</span> e conhecimento na área de desenvolvimento.</p>
+                <p>Somos novos na área empresarial, porém temos total <span>experiência</span> e conhecimento na área de
+                    desenvolvimento.</p>
                 <button type="button" class="negative" onclick="more()">
                     Saiba mais
                 </button>
@@ -82,14 +87,16 @@
         <div class="header">
             <h1 id="saber-mais">Por que a Nexus ?</h1>
             <p>
-                A <b>Nexus</b> está pronta para <span>começar a crescer</span> junto com você, veja abaixo por que temos certeza disso:
+                A <b>Nexus</b> está pronta para <span>começar a crescer</span> junto com você, veja abaixo por que temos
+                certeza disso:
             </p>
         </div>
         <div class="cards">
             <div class="feature">
                 <h1> Segurança</h1>
                 <p>
-                    Investimos pesado na <span>segurança</span> de nossos sistemas. Além disso sempre estamos depurando para encontrar falhas ou vulnerabilidades.
+                    Investimos pesado na <span>segurança</span> de nossos sistemas. Além disso sempre estamos depurando
+                    para encontrar falhas ou vulnerabilidades.
                 </p>
             </div>
             <div class="feature">
@@ -117,12 +124,16 @@
         <div class="header">
             <h1>Tecnologias</h1>
             <p>
-                A <b>Nexus</b> é <span>fullstack</span> e utiliza tecnologias da <span>Microsoft</span>, trazendo a você <span>qualidade</span> em todas as fases do desenvolvimento.
+                A <b>Nexus</b> é <span>fullstack</span> e utiliza tecnologias da <span>Microsoft</span>, trazendo a você
+                <span>qualidade</span> em todas as fases do desenvolvimento.
             </p>
         </div>
         <div class="carousel">
             <div class="image">
                 <img src="Resources\img\brands\dotnet.svg" width="100rem" />
+            </div>
+            <div class="image">
+                <img src="Resources\img\brands\azure.svg" width="100rem" />
             </div>
             <div class="image">
                 <img src="Resources\img\brands\sql-server.svg" width="100rem" />
@@ -133,9 +144,6 @@
             <div class="image">
                 <img src="Resources\img\brands\github.svg" width="100rem" />
             </div>
-            <div class="image">
-
-            </div>
         </div>
     </section>
 
@@ -143,7 +151,8 @@
         <div class="header">
             <h1>Entrar em contato</h1>
             <p>
-                Precisa de ajuda para <span> elaborar </span> ou <span> construir </span> seu projeto ? Entre em contato conosco que iremos tirar seu sonho do papel.
+                Precisa de ajuda para <span> elaborar </span> ou <span> construir </span> seu projeto ? Entre em contato
+                conosco que iremos tirar seu sonho do papel.
             </p>
         </div>
         <div class="content-divided" id="contact">
@@ -165,19 +174,19 @@
 
     <footer>
         <section class="singup" id="singup">
+            <img src="Resources/img/brands/nexus.png" width="60rem" />
+               
             <div class="text">
                 <h1>Registre-se</h1>
                 <p>É sério que você vai perder essas vantagens ?</p>
             </div>
             <div class="buttons">
-                <button type="button"
-                        class="negative"
-                        onclick="window.location.href='https://oauth.nexus-company.tech/Authentication'">
+                <button type="button" class="negative"
+                    onclick="window.location.href='https://oauth.nexus-company.tech/Authentication'">
                     Login
                 </button>
-                <button type="button"
-                        class="positive"
-                        onclick="window.location.href='https://oauth.nexus-company.tech/Account/Register'">
+                <button type="button" class="positive"
+                    onclick="window.location.href='https://oauth.nexus-company.tech/Account/Register'">
                     Registre-se
                 </button>
             </div>
@@ -188,7 +197,7 @@
                 <div class="site-footer-inner">
                     <div class="brand footer-brand">
                         <a href="#">
-                            <img class="asset-logo" src="Resources/img/nexus_crystal.png" alt="Logo">
+                            <img class="asset-logo" src="Resources/img/arrow-up-navigation.svg" alt="Logo">
                         </a>
                     </div>
                     <ul class="footer-links list-reset">
@@ -202,7 +211,8 @@
                             <a href="#">FAQ's</a>
                         </li>
                         <li>
-                            <a href="https://wa.me/5561992503344?text=Hello%2C+I%27m+need+support+can+you+help+me%3F%21">Support</a>
+                            <a
+                                href="https://wa.me/5561992503344?text=Hello%2C+I%27m+need+support+can+you+help+me%3F%21">Support</a>
                         </li>
                         <li>
                             <a href="https://auth.nexus-company.tech/swagger">OAuth</a>
