--- a/Site/index.html
+++ b/Site/index.html
@@ -157,7 +157,10 @@
         </div>
         <div class="content-divided" id="contact">
             <div class="content left">
-                <img src="Resources\img\mobile-contact-mockup.gif" alt="mobile contact mockup" width="300rem" />
+                <video id="video-mockup" width="300rem">
+                    <source src="Resources/img/mobile-contact-mockup.mp4" type="video/mp4">
+                    Your browser does not support HTML video.
+                </video>
             </div>
             <div class="divider"></div>
             <div class="content right slide">
@@ -205,7 +208,7 @@
                             <a href="/Home/Index">Home</a>
                         </li>
                         <li>
-                            <a href="/Home/Contact">Contact</a>
+                            <a href="/Home/Contact">Contatos</a>
                         </li>
                         <li>
                             <a href="#">FAQ's</a>
@@ -218,7 +221,7 @@
                             <a href="https://auth.nexus-company.tech/swagger">OAuth</a>
                         </li>
                         <li>
-                            <a href="/Home/Privacy">Privacy</a>
+                            <a href="/Home/Privacy">Privacidade</a>
                         </li>
                     </ul>
                     <ul class="footer-social-links list-reset">
@@ -253,7 +256,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">© 2022 Nexus Company, all rights reserved</div>
+                    <div class="footer-copyright">© 2022 Nexus Company, all rights reserved.</div>
                 </div>
             </div>
         </section>
