--- a/Site/index.html
+++ b/Site/index.html
@@ -51,7 +51,7 @@
                 </button>
             </div>
         </div>
-        <div class="content-divided">
+        <div class="content-divided reverse">
             <div class="content left slide">
                 <h1>Nossos preços</h1>
                 <p>Focamos em <b>sempre</b> entregar o <span> melhor resultado</span> com o <span> menor custo </span>
@@ -256,7 +256,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">© 2022 Nexus Company, all rights reserved.</div>
+                    <div class="footer-copyright">© 2022 Nexus Company, todos os direitos reservados.</div>
                 </div>
             </div>
         </section>
