android meta tags

--- a/Site/index.html
+++ b/Site/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no" />
     <title>Nexus Company</title>
     <link rel="stylesheet" href="Resources\css\index.css" />
     <link rel="icon" href="favicon.ico" />
