--- a/Site/index.html
+++ b/Site/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="cards">
             <div class="feature">
-                <h1> Segurança</h1>
+                <h1>Segurança</h1>
                 <p>
                     Investimos pesado na <span>segurança</span> de nossos sistemas. Além disso sempre estamos depurando
                     para encontrar falhas ou vulnerabilidades.
@@ -111,13 +111,13 @@
             <div class="feature">
                 <h1>Produtividade</h1>
                 <p>
-                    Queremos que você se concetre apenas no que gosta de fazer.
+                    Queremos que você se concetre <span>apenas</span> no que <b>gosta de fazer</b>. Estamos sempre desenvolvendo soluções para auxiliar você.
                 </p>
             </div>
             <div class="feature">
                 <h1>Suporte</h1>
                 <p>
-                    Nosso suporte está sempre prontos para auxiliar você caso tenha algum problema!
+                    A <b>Nexus</b> se preocupa com sua satisfação, por isso nosso suporte está <span>sempre</span> pronto para auxiliar você caso tenha algum problema!
                 </p>
             </div>
         </div>
