--- a/Site/index.html
+++ b/Site/index.html
@@ -38,7 +38,20 @@
         </section>
     </main>
 
-    <section class="body" id="content">
+    <section class="body" id="content">  <div class="content-divided reverse">
+        <div class="content left slide">
+            <h1>Qualidade</h1>
+            <p>Queremos sempre trazer <span>qualidade</span> no desenvolvimento de softwares, por isso <span>não focomos no lucro</span>.</p>
+            <button type="button" class="positive" onclick="more()">
+                Saiba mais
+            </button>
+        </div>
+        <div class="content right background-gradient">
+            <div class="ocutor">
+                <img src="Resources\img\icon-quality.svg" width="125rem" />
+            </div>
+        </div>
+    </div>
         <div class="content-divided">
             <div class="content left background-gradient">
                 <div class="ocutor extreme">
