--- a/Site/index.html
+++ b/Site/index.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8" />
-    <meta name="HandheldFriendly" content="true" />
-    <meta name="MobileOptimized" content="320" />
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no" />
+    <meta charset="utf-8">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no">
     <title>Nexus Company</title>
-    <link rel="stylesheet" href="Resources\css\index.css" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="Resources\css\index.css">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="Resources/js/jquery.js"></script>
     <script src="Resources/js/index.js"></script>
-
 </head>
 
 <body>
@@ -34,34 +31,37 @@
         </section>
         <section class="read-more">
             <p>Veja mais</p>
-            <img class="arrow" src="Resources\img\arrow-down-navigation.svg" onclick="seen()" />
+            <img class="arrow" src="Resources\img\arrow-down-navigation.svg" onclick="seen()">
         </section>
     </main>
 
-    <section class="body" id="content">  <div class="content-divided reverse">
-        <div class="content left slide">
-            <h1>Qualidade</h1>
-            <p>Queremos sempre trazer <span>qualidade</span> no desenvolvimento de softwares, por isso <span>não focomos no lucro</span>.</p>
-            <button type="button" class="positive" onclick="more()">
-                Saiba mais
-            </button>
-        </div>
-        <div class="content right background-gradient">
-            <div class="ocutor">
-                <img src="Resources\img\icon-quality.svg" width="125rem" />
+    <section class="body" id="content">
+        <div class="content-divided reverse">
+            <div class="content left slide show">
+                <h1>Qualidade</h1>
+                <p>Queremos sempre trazer <span>qualidade</span> no desenvolvimento de softwares, por isso <span>não focomos no lucro</span>.</p>
+                <button type="button" class="positive" onclick="more()">
+                    Saiba mais
+                </button>
+            </div>
+            <div class="content right background-gradient">
+                <div class="ocutor">
+                    <img src="Resources\img\icon-quality.svg" width="125rem">
+                </div>
             </div>
         </div>
-    </div>
         <div class="content-divided">
             <div class="content left background-gradient">
                 <div class="ocutor extreme">
-                    <img src="Resources\img\responsive-design.svg" width="125rem" />
+                    <img src="Resources\img\responsive-design.svg" width="125rem">
                 </div>
             </div>
             <div class="content right slide">
                 <h1>Fullstack</h1>
-                <p>Desenvolvemos para <span>todas</span> as plataformas, dessa forma seu <b>app</b> será acessado em
-                    <span>todos</span> dispositivos.</p>
+                <p>
+                    Desenvolvemos para <span>todas</span> as plataformas, dessa forma seu <b>app</b> será acessado em
+                    <span>todos</span> dispositivos.
+                </p>
                 <button type="button" class="negative" onclick="more()">
                     Saiba mais
                 </button>
@@ -70,28 +70,32 @@
         <div class="content-divided reverse">
             <div class="content left slide">
                 <h1>Nossos preços</h1>
-                <p>Focamos em <b>sempre</b> entregar o <span> melhor resultado</span> com o <span> menor custo </span>
-                    possível para todos os nossos parceiros.</p>
+                <p>
+                    Focamos em <b>sempre</b> entregar o <span> melhor resultado</span> com o <span> menor custo </span>
+                    possível para todos os nossos parceiros.
+                </p>
                 <button type="button" class="positive" onclick="more()">
                     Saiba mais
                 </button>
             </div>
             <div class="content right background-gradient">
                 <div class="ocutor">
-                    <img src="Resources\img\preco-baixo.svg" width="125rem" />
+                    <img src="Resources\img\preco-baixo.svg" width="125rem">
                 </div>
             </div>
         </div>
         <div class="content-divided">
             <div class="content left background-gradient">
                 <div class="ocutor normal">
-                    <img src="Resources\img\experiencia.svg" width="125rem" />
+                    <img src="Resources\img\experiencia.svg" width="125rem">
                 </div>
             </div>
             <div class="content right slide">
                 <h1>Start up</h1>
-                <p>Somos novos na área empresarial, porém temos total <span>experiência</span> e conhecimento na área de
-                    desenvolvimento.</p>
+                <p>
+                    Somos novos na área empresarial, porém temos total <span>experiência</span> e conhecimento na área de
+                    desenvolvimento.
+                </p>
                 <button type="button" class="negative" onclick="more()">
                     Saiba mais
                 </button>
@@ -146,19 +150,19 @@
         </div>
         <div class="carousel">
             <div class="image">
-                <img src="Resources\img\brands\dotnet.svg" width="100rem" />
+                <img src="Resources\img\brands\dotnet.svg" width="100rem">
             </div>
             <div class="image">
-                <img src="Resources\img\brands\azure.svg" width="100rem" />
+                <img src="Resources\img\brands\azure.svg" width="100rem">
+            </div>
+            <div class="image focus">
+                <img src="Resources\img\brands\sql-server.svg" width="100rem">
             </div>
             <div class="image">
-                <img src="Resources\img\brands\sql-server.svg" width="100rem" />
+                <img src="Resources\img\brands\xamarin.svg" width="100rem">
             </div>
             <div class="image">
-                <img src="Resources\img\brands\xamarin.svg" width="100rem" />
-            </div>
-            <div class="image">
-                <img src="Resources\img\brands\github.svg" width="100rem" />
+                <img src="Resources\img\brands\github.svg" width="100rem">
             </div>
         </div>
     </section>
@@ -191,21 +195,29 @@
         </div>
     </section>
 
+    <section class="content footer">
+        <img src="Resources/img/wave-inverted.svg">
+        <div class="content-divided">
+            <div class="content left background">
+                <img src="Resources/img/blob-wave.png">
+            </div>
+            <div class="content right slide">
+                <h1>Juan Douglas</h1>
+                <p>A <a href="~/Home/Index">Nexus Company</a> tem como objetivo trazer qualidade, seguran&ccedil;a e efici&ecirc;ncia em todos os seus softwares, assim dando a melhor experi&ecirc;ncia aos seus usu&aacute;rios.</p>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <section class="singup" id="singup">
-            <img src="Resources/img/brands/nexus.png" width="60rem" />
-               
             <div class="text">
-                <h1>Registre-se</h1>
-                <p>É sério que você vai perder essas vantagens ?</p>
+                <h2>Não é membro da Nexus ?</h2>
+                <p class="text-sm mb-0">
+                    Cadastra-se e trabalhe com quem sabe fazer a diferen&ccedil;a.
+                </p>
             </div>
             <div class="buttons">
-                <button type="button" class="negative"
-                    onclick="window.location.href='https://oauth.nexus-company.tech/Authentication'">
-                    Login
-                </button>
-                <button type="button" class="positive"
-                    onclick="window.location.href='https://oauth.nexus-company.tech/Account/Register'">
+                <button type="button" class="positive" onclick="window.location.href='https://oauth.nexus-company.tech/Account/Register'">
                     Registre-se
                 </button>
             </div>
@@ -215,64 +227,42 @@
             <div class="container">
                 <div class="site-footer-inner">
                     <div class="brand footer-brand">
-                        <a href="#">
-                            <img class="asset-logo" src="Resources/img/arrow-up-navigation.svg" alt="Logo">
-                        </a>
                     </div>
                     <ul class="footer-links list-reset">
                         <li>
-                            <a href="/Home/Index">Home</a>
+                            <a href="~/Home/Index">Inicio</a>
                         </li>
                         <li>
-                            <a href="/Home/Contact">Contatos</a>
+                            <a href="~/Home/Contact">Contato</a>
                         </li>
                         <li>
-                            <a href="#">FAQ's</a>
+                            <a href="~/Home/Privacy">Privacidade</a>
                         </li>
                         <li>
-                            <a
-                                href="https://wa.me/5561992503344?text=Hello%2C+I%27m+need+support+can+you+help+me%3F%21">Support</a>
-                        </li>
-                        <li>
-                            <a href="https://auth.nexus-company.tech/swagger">OAuth</a>
-                        </li>
-                        <li>
-                            <a href="/Home/Privacy">Privacidade</a>
+                            <a href="https://wa.me/5561992503344?text=Hello%2C+I%27m+need+support+can+you+help+me%3F%21">Equipe</a>
                         </li>
                     </ul>
                     <ul class="footer-social-links list-reset">
                         <li>
                             <a href="https://www.linkedin.com/company/nexuscompany">
                                 <span class="screen-reader-text">Linkedin</span>
-                                <i class="fa fa-lg fa-linkedin"> </i>
+                                <i class="fa fa-lg fa-brands fa-linkedin"> </i>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.instagram.com/company.nexus/">
                                 <span class="screen-reader-text">Instagram</span>
-                                <i class="fa fa-lg fa-instagram"></i>
+                                <i class="fa fa-lg fa-brands fa-instagram"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://wa.me/5561992503344?text=Hello,%20can%20you%20help%20me%20?!">
+                            <a href="https://wa.me/5561992606441?text=Ol%C3%A1%2C%20pode%20me%20ajudar?">
                                 <span class="screen-reader-text">Whatsapp</span>
-                                <i class="fa fa-lg fa-whatsapp"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Twitter</span>
-                                <i class="fa fa-lg fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://docs.nexus-company.tech">
-                                <span class="screen-reader-text">Documentation</span>
-                                <i class="fa fa-lg fa-book"></i>
+                                <i class="fa fa-lg fa-brands fa-whatsapp"></i>
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">© 2022 Nexus Company, todos os direitos reservados.</div>
+                    <div class="footer-copyright">©2023 Nexus Company, todos os direitos reservados.</div>
                 </div>
             </div>
         </section>
